--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,5 +1,17 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  /*background-image: linear-gradient(0deg, #0084ff3f, #0a358b3a 50%, #10003f3f);
+  background: url('../assets/fondoProvo.png');*/
+  background: linear-gradient(to bottom, rgba(69, 166, 220, 73%), rgba(156, 20, 175, 61%), rgba(164, 7, 171, 53%)), linear-gradient(to right, rgba(0, 133, 255, 90%), rgba(10, 52, 139, 69%), rgba(16, 0, 63, 79%)), url('../assets/fondoProvo.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
