--- a/src/Styles/facturacionStyle.css
+++ b/src/Styles/facturacionStyle.css
@@ -49,7 +49,9 @@
     margin: 5px 0px;
     margin-right: 5px;
     padding: 10px 5px;
+    font-size: 1.2em;
     font-weight: 700;
+    color: rgb(233, 230, 230);
 }
 
 .detallFactTien .contInput.extends input{
@@ -61,11 +63,12 @@
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 1px;
     color: rgb(22, 21, 21);
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     margin: 5px 0px;
+    background: white;
 }
 
 .detallFactTien .contInput input{
@@ -77,11 +80,12 @@
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 1px;
     color: rgb(22, 21, 21);
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     margin: 5px 0px;
+    background: white;
 }
 
 .formDetallFactura .contInput p{
@@ -93,11 +97,12 @@
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 1px;
     color: rgb(22, 21, 21);
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     margin: 5px 0px;
+    background: white;
 }
 
 .formDetallFactura .contInput{
@@ -147,11 +152,12 @@
     box-shadow: 0px 0px 10px rgba(24, 22, 22, 0.445);
     padding: 10px 5px 12px 5px;
     margin-bottom: 20px;
+    background: #eeebeb;
 }
 
 .contProductFact table tr th{
     border-bottom: 1px solid gray;
-    font-size: 1.5em;
+    font-size: 1.8em;
 }
 
 .contProductFact table tbody{
@@ -162,6 +168,7 @@
     border-bottom: 1px solid rgb(173, 166, 166);
     padding-top: 10px;
     padding-bottom: 5px;
+    font-size: 1.5em;
     text-align: center;
 }
 
