--- a/src/Styles/facturacionStyle.css
+++ b/src/Styles/facturacionStyle.css
@@ -30,20 +30,27 @@
 .conteTitleFactueacion .backToHome{
     position: absolute;
     left: 50px;
+    width: 50px;
+    height: 50px;
     font-size: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    padding: 5px;
     border: none;
+}
+
+.conteTitleFactueacion .backToHome:hover{
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.411);
+    color: white;
+    background: blue;
 }
 
 /* Inicio Style Form */
 .contetFormFact{
-    margin-top: 70px;
     width: 90%;
     padding: 10px;
+    padding-top: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -193,6 +200,7 @@
 .contProductFact{
     padding: 0px 10px;
     width: 100%;
+    flex: none;
 }
 
 .contProductFact table{
@@ -202,6 +210,9 @@
     padding: 10px 5px 12px 5px;
     margin-bottom: 20px;
     background: #eeebeb;
+    flex: none;
+    overflow: hidden;
+    overflow-x: auto;
 }
 
 .contProductFact table tr th{
@@ -228,6 +239,7 @@
 
 .contProductFact table tr .itemAccionFact{
     width: 180px;
+    flex: none;
 }
 
 .contProductFact table tr td button{
