--- a/client/src/Styles/inventario.css
+++ b/client/src/Styles/inventario.css
@@ -70,6 +70,10 @@
   font-size: small;
 }
 
+.insertar {
+  padding-bottom: 2.5%;
+}
+
 .insert {
   font-size: 1.1rem;
   height: 30px;
@@ -78,11 +82,11 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 1%;
 }
 
 .inventario {
   width: 100%;
+  height: 800px;
   /*flex: 4;*/
   margin-bottom: 10px;
   border: solid 4px black;
@@ -92,20 +96,6 @@
   columns: 6;
 }
 
-.menu1 {
-  height: 800px;
-  width: 22%;
-  display: flex;
-  margin-bottom: 10px;
-  border: solid 4px black;
-  float: left;
-  justify-content: center;
-}
-
-.lista2 {
-  align-items: center;
-  align-self: center;
-}
 /*.menu1 {
   flex: 1;
   margin-right: 10px;
@@ -134,7 +124,7 @@
   /*padding-left: 10%;
   padding-top: 5%;
   padding-bottom: 0%;*/
-  border: solid 4px black;
+  /* border: solid 4px black;*/
 }
 
 .galeria-h3,
