--- a/client/src/Styles/Facturacion/FacturaActiva.css
+++ b/client/src/Styles/Facturacion/FacturaActiva.css
@@ -1,6 +1,6 @@
 .modalFact{
     width: 95%;
-    height: 550px;
+    height: 90%;
     background: white;
     border-radius: 10px;
 }
@@ -116,7 +116,6 @@
     padding-left: 10px;
     padding-bottom: 10px;
     overflow: hidden;
-    overflow-x: auto;
 }
 
 .modalFact .contBody .zonaList .headList{
@@ -234,3 +233,4 @@
     border-radius: 50%;
     margin: 0 3px;
 }
+
