--- a/client/src/Styles/Facturacion/mediaFacturacion.css
+++ b/client/src/Styles/Facturacion/mediaFacturacion.css
@@ -1,5 +1,120 @@
 
 /* Ajuste al cambio de pantalla (@media) */
+
+@media (max-width: 1332px){
+    
+    .modalFact .contBody .zonaList .precioTotal{
+        display: none;
+    }
+
+}
+
+@media (max-width: 1168px){
+    
+    .modalFact .contBody{
+        flex-wrap: wrap;
+        overflow: hidden;
+        overflow-y: auto;
+    }
+
+    .modalFact .contBody .zonaData{
+        width: 100%;
+        height: 260px;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .modalFact .contBody .zonaData .contDataStore,
+    .modalFact .contBody .zonaData .contDataFactura{
+        width: 50%;
+        align-items: center;
+    }
+
+    .modalFact .contBody .zonaList .precioTotal{
+        display: flex;
+    }
+
+    .modalFact .contBody .zonaList{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .modalFact .contBody .zonaList .headList,
+    .modalFact .contBody .zonaList .bodyList{
+        width: auto;
+    }
+
+}
+
+
+@media (max-width: 964px){
+    
+    .modalFact .contBody .zonaList .precioTotal{
+        display: none;
+    }
+
+}
+
+
+@media (max-width: 820px){
+    
+    .modalFact .contBody .zonaList .idProducto{
+        display: none;
+    }
+
+}
+
+
+@media (max-width: 692px){
+    
+    .modalFact .contBody .zonaList .nameProducto{
+        width: 150px;
+    }
+
+    .modalFact .contBody .zonaList .cantidadProducto{
+        width: 100px;
+    }
+
+    .modalFact .contBody .zonaList .precioProducto{
+        width: 100px;
+    }
+
+}
+
+@media (max-width: 665px){
+    .modalFact .contBody .zonaData{
+        flex-direction: column;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    .modalFact .contBody .zonaData .contDataStore,
+    .modalFact .contBody .zonaData .contDataFactura{
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 560px){
+    .modalFact .contBody .zonaList {
+        justify-content: flex-start;
+        align-items: flex-start;
+        overflow-x: auto;
+    }
+
+    .modalFact .contFooter h1{
+        font-size: 24px;
+    }
+
+}
+
+/*
 @media (max-width: 890px){
     .contetFormFact{
         flex-direction: column;
@@ -49,4 +164,4 @@
         width: 500px;
     }
     
-}
+}*/
