--- a/client/src/Styles/Facturacion/FacturaActiva.css
+++ b/client/src/Styles/Facturacion/FacturaActiva.css
@@ -62,6 +62,34 @@
     overflow-y: auto;
 }
 
+.modalFact .contBody .zonaData .headDataDetail{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.modalFact .contBody .zonaData .headDataDetail button{
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5px;
+}
+
+.modalFact .contBody .zonaData .headDataDetail button:hover{
+    background: #00aeff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
+}
+
+
+.modalFact .contBody .zonaData .headDataDetail button ion-icon{
+    font-size: 20px;
+}
+
 .modalFact .contBody .zonaData .contDataStore,
 .modalFact .contBody .zonaData .contDataFactura{
     flex: none;
@@ -74,6 +102,13 @@
     padding-left: 20px;
     padding-top: 10px;
 }
+
+.modalFact .contBody .zonaData .contDataStore.active, 
+.modalFact .contBody .zonaData .contDataFactura.active{
+    height: 55px;
+    justify-content: flex-start;
+    overflow: hidden;
+} 
 
 .modalFact .contBody .zonaData .contDataStore p,
 .modalFact .contBody .zonaData .contDataFactura p{
