--- a/client/src/Styles/Facturacion/Facturacion.css
+++ b/client/src/Styles/Facturacion/Facturacion.css
@@ -21,8 +21,29 @@
     justify-content: space-between;
 }
 
+.headerHF .contButtonHead{
+    width: 100px;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.headerHF .contButtonHead button{
+    flex: none;
+    width: 50px;
+    height: 100%;
+    border-radius: 50%;
+    border: none;
+}
+
+.headerHF .contButtonHead button ion-icon{
+    font-size: 35px;
+}
+
+
 .headerHF .contTitle{
-    width: calc(100% - 50px);
+    width: calc(100% - 150px);
     padding: 15px 15px;
     padding-left: 50px;
 }
