--- a/client/src/Styles/Login/login.css
+++ b/client/src/Styles/Login/login.css
@@ -1,17 +1,17 @@
 
     .all{
-    position: fixed;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+      position: fixed;
+      width: 100%;
+      padding-top: 10px;
+      padding-bottom: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
-    .cout {
+    /*.cout {
         position: absolute; 
-        top: 30%;
+        top: 26%;
         height: 120px;
         width: 120px;
         border-radius: 50%;
@@ -22,7 +22,7 @@
       
       .cins {
         width: 85px;
-        height: 25px; /* as the half of the width */
+        height: 25px;
         position: relative; 
         left:10px; 
         top:70px; 
@@ -41,6 +41,34 @@
         top: -70px;
         border-radius: 50%;
         border: 8px solid white;
+      }*/
+
+      .contFormLogin{
+        padding: 0 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+
+      .contFormLogin form{
+        width: 90%;
+      }
+
+      .contFormLogin form input{
+        padding: 14px 10px;
+      }
+
+      .contIconLogin{
+        width: 100%;
+        height: 150px;
+        margin: 0;
+        padding-top: 10px;
+      }
+
+      .contIconLogin ion-icon{
+        font-size: 150px;
+        color: white;
       }
 
         .ing{
@@ -63,7 +91,7 @@
         outline-offset: 0px;
         text-shadow: none;
         transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-        top: 275px;
+        /*top: 275px;*/
         right: 70px;
         position: absolute;
       } 
