Frontend --Actualizacion de los modulos-- V4.0.0

--- a/client/src/Styles/MargeSales/margeSales.css
+++ b/client/src/Styles/MargeSales/margeSales.css
@@ -1,15 +1,15 @@
 .bodyMargeSales{
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: flex-end;
+    align-items: flex-end;
     flex-direction: row;
 }
 
 .BodyMS{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 70px);
 }
 
 .headerMS{
@@ -75,7 +75,7 @@
 
 .cuerpoMS {
     width: 100%;
-    height: calc(100% - 90px);
+    height: calc(100% - 50px);
     overflow: hidden;
     overflow-y: auto;
     padding: 10px;
@@ -97,28 +97,50 @@
 .cuerpoMS .GraficasSales{
     width: 100%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    min-height: 200px;
-    background: white;
     border-radius: 20px;
     margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .cuerpoMS .infoInventario, .cuerpoMS .TotalVentas, .cuerpoMS .Contfacturas, .cuerpoMS .infoStore{
     width: 100%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    min-height: 200px;
-    background: white;
     border-radius: 20px;
     margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
 
 
 .cuerpoMS .GraficasSales .ventasProduct{
-    width: 50px;
-    height: 50px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.cuerpoMS .GraficasSales .ventasProduct img {
+    width: 100%;
 }
 
 .cuerpoMS .GraficasSales .ventasDias{
-    width: 50px;
-    height: 50px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.cuerpoMS .GraficasSales .ventasDias img{
+    width: 100%;
 }
