--- a/client/src/Styles/MargeSales/margeSales.css
+++ b/client/src/Styles/MargeSales/margeSales.css
@@ -14,7 +14,7 @@
 
 .headerMS{
     width: 100%;
-    height: 80px;
+    height: 75px;
     padding-right: 15px;
     display: flex;
     align-items: center;
@@ -23,7 +23,7 @@
 
 .headerMS .contButtonHead{
     width: 100px;
-    height: 50px;
+    height: 40px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -38,7 +38,7 @@
 }
 
 .headerMS .contButtonHead button ion-icon{
-    font-size: 35px;
+    font-size: 20px;
 }
 
 .headerMS .contTitle{
@@ -51,7 +51,8 @@
     display: inline;
     padding: 10px 15px;
     font-weight: 900;
-    box-shadow: -6px 8px 10px rgba(0, 0, 0, 0.5);
+    color: antiquewhite;
+    box-shadow: -6px 8px 10px rgba(253, 253, 253, 0.5);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
@@ -79,6 +80,7 @@
     overflow: hidden;
     overflow-y: auto;
     padding: 10px;
+    
 }
 
 .cuerpoMS::-webkit-scrollbar{
@@ -95,7 +97,7 @@
 }
 
 .cuerpoMS .GraficasSales{
-    width: 100%;
+    width: 97%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     margin: 10px 0;
@@ -103,11 +105,13 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 10px; margin: 10px; border: 2px solid rgb(255, 255, 255); float: left;
     overflow: hidden;
+    
 }
 
 .cuerpoMS .infoInventario, .cuerpoMS .TotalVentas, .cuerpoMS .Contfacturas, .cuerpoMS .infoStore{
-    width: 100%;
+    width: 97%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     margin: 10px 0;
@@ -116,20 +120,25 @@
     align-items: center;
     flex-wrap: wrap;
     overflow: hidden;
+    padding: 10px; margin: 10px; border: 2px solid rgb(255, 255, 255); float: left;
+    
 }
 
 
+
 .cuerpoMS .GraficasSales .ventasProduct{
-    width: 500px;
+    width: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 10px; margin: 20px;  float: left; 
     overflow: hidden;
 }
 
 .cuerpoMS .GraficasSales .ventasProduct img {
     width: 100%;
+    
 }
 
 .cuerpoMS .GraficasSales .ventasDias{
@@ -139,8 +148,12 @@
     align-items: center;
     flex-wrap: wrap;
     overflow: hidden;
+    padding: 10px; margin: 20px; float: left; 
+    
+    
 }
 
 .cuerpoMS .GraficasSales .ventasDias img{
     width: 100%;
+    padding: 10px; margin: 10px; float: left; 
 }
