--- a/client/src/Styles/Facturacion/Facturacion.css
+++ b/client/src/Styles/Facturacion/Facturacion.css
@@ -57,7 +57,8 @@
     display: inline;
     padding: 10px 15px;
     font-weight: 900;
-    box-shadow: -6px 8px 10px rgba(255, 255, 255, 0.5);
+    color: antiquewhite;
+    box-shadow: -6px 8px 10px rgba(253, 253, 253, 0.5);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
